# Cosmos-prerelease

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pytest.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  conftest.py  justfile  pyproject.toml  pyrefly.toml
.agents/skills/cosmos3-inference/: SKILL.md
.claude/skills/cosmos-utils-vlm-migration/: SKILL.md
.config/: rumdl.toml
.github/workflows/: pre-commit.yml
ci/: .pre-commit-config-base.yaml
cosmos-inference/: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml  pyrefly.toml
cosmos-inference/.agents/skills/cosmos3-codebase-nav/: SKILL.md
cosmos-inference/.agents/skills/cosmos3-post-training/: SKILL.md
cosmos-inference/.agents/skills/cosmos3-setup/: SKILL.md
cosmos-inference/.claude/skills/cosmos3-env-troubleshoot/: SKILL.md
cosmos-inference/ci/: .markdown-toc-creator.toml  .pre-commit-config-base.yaml  license.txt  uv_lock.sh  uv_lock_script.sh
cosmos-inference/cosmos3/: _test.py  args.py  args_test.py  dataset.py  dataset_samples.py  dataset_samples_test.py  inference.py  inference_test.py  model.py  vision.py
cosmos-inference/cosmos3/_src/imaginaire/: trainer.py
cosmos-inference/cosmos3/_test/: distilled.sh  eval_forward_dynamics.sh  eval_policy.sh  sft.sh  sft_forward_dynamics.sh  sft_policy.sh
cosmos-inference/cosmos3/common/: args.py  checkpoints.py  config.py
cosmos-inference/cosmos3/fixtures/: script.py
cosmos-inference/cosmos3/scripts/: _convert_model_to_diffusers.py  _test.py  action_policy_server.py  captions_to_sft_jsonl.py  dataset_utils.py  eval.py  export_model.py  prefetch_hf_checkpoints.py  train.py
cosmos-inference/docker/: ci.Dockerfile  entrypoint.sh
cosmos-inference/docs/: action_policy_closed_loop_eval.md  dataset_jsonl.md  environment_variables.md  gallery.md  inference.md  inference_online.md  prompting.md  training.md
cosmos-inference/examples/: inference.py
cosmos-inference/examples/_test/: inference_pipeline.sh
cosmos-inference/inputs/omni/: action_forward_dynamics_av.json  action_forward_dynamics_camera.jsonl  action_forward_dynamics_robot.json  action_inverse_dynamics_robot.json  action_policy_av.json  action_policy_robot.json
cosmos-inference/schemas/: OmniSampleOverrides.schema.json  OmniSampleOverrides.yaml  OmniSetupOverrides.schema.json  OmniSetupOverrides.yaml
cosmos-inference/vllm-cosmos3/: README.md
cosmos-inference/vllm-cosmos3/vllm_cosmos3/: __init__.py
cosmos3/: _test.py  action.py  args.py  args_test.py  dataset_samples.py  flags.py  inference.py  model.py  model_test.py  vision.py
cosmos3/_src/imaginaire/: config.py  flags.py  model.py  serialization.py  trainer.py
cosmos3/_src/imaginaire/utils/: ema.py  (+25 more)
cosmos3/_src/vfm/: conditioner.py
cosmos3/_test/: autoregressive.sh  distilled.sh  latency.sh  omni-super.sh  omni.sh  omni_param.sh  sft.sh
cosmos3/common/: args.py  args_test.py  checkpoints.py  config.py  config_test.py  inference.py  inference_test.py  init.py
cosmos3/configs/experiment/: action_policy_sft_8b.yaml  mixed_modality_sft_8b.yaml
cosmos3/defaults/forward_dynamics/: sample_args.json
cosmos3/defaults/video2video/: sample_args.json
cosmos3/fixtures/: args.py  script.py
cosmos3/ray/: gradio.py  serve.py  serve_test.py  submit.py
cosmos3/ray/configs/: latency.yaml  throughput.yaml
cosmos3/scripts/: _test.py  action_policy_server.py  caption_from_video.py  captions_to_sft_jsonl.py  convert_model_to_dcp.py  eval_utils.py  export_config.py  export_model.py  export_schemas.py  export_schemas_test.py  hydra.py  inference.py  prefetch_hf_checkpoints.py  train.py  upsample_prompts.py
cosmos3/scripts/_test/: convert_model_to_dcp.sh  convert_model_to_diffusers.sh  export_config.sh  export_model.sh
cosmos_training/: launch_action_libero.sh  launch_action_libero_toml.sh  launch_mixed_modality_sft_8b.sh  launch_mixed_modality_sft_8b_toml.sh  launch_t2w_sft_local_datapacker.sh  launch_t2w_sft_local_datapacker_toml.sh  launch_vlm_llava_ov.sh  launch_vlm_llava_ov_toml.sh  run_4exps_oss.sh  run_mixed_modality_sft_trace.sh  run_mixed_modality_sft_trace_toml.sh  sitecustomize.py
cosmos_training/configs/base/: base_config_test.py  config.py
cosmos_training/cosmos/callbacks/: expert_heatmap.py  grad_clip.py  learning_rate_logger.py  log_tensor_shape.py  moe_stability_callback.py  wandb_log.py  wandb_log_simple.py
cosmos_training/cosmos/checkpoint/: dcp.py
cosmos_training/cosmos/trainer/: __init__.py
cosmos_training/cosmos/utils/: checkpoint_db.py  config.py  fused_adam.py  serialization.py
cosmos_training/experiments/sft/: action_fdm_sft_nano.py  action_policy_sft_nano.py  mixed_modality_sft_8b.py  mixed_modality_sft_cosmos3_super.py  mixed_modality_sft_nano.py
cosmos_training/scripts/: interface_toml.py  train.py
cosmos_training/test_internal/: test_action_fdm_sft_nano.sh  test_action_policy_sft_nano.sh  test_mixed_modality_sft_nano.sh
cosmos_training/toml/: launch_action_libero.toml  launch_mixed_modality_sft_8b.toml  launch_vlm_llava_ov.toml  mixed_modality_sft_8b.toml  run_alignment_test.sh
cosmos_training_meta/: files.txt
docker/: README.md  nightly.Dockerfile
docs/: action_policy_closed_loop_eval.md  checkpoints.md  code_structure.md  configs.md  dataset.md  examples.md  faq.md  inference.md  setup.md  training.md
examples/: README.md  _test.py  inference_pipeline.py  launch_action_libero_toml.sh  launch_mixed_modality_sft_8b_toml.sh  launch_t2w_sft_local_datapacker_toml.sh  launch_vlm_llava_ov_toml.sh
examples/_test/: inference.sh
examples/toml/: alignment_test.toml  launch_t2w_sft_local_datapacker.toml  run_alignment_test.sh
inputs/: t2v_long_prompts.jsonl
inputs/omni/: action_forward_dynamics_camera_0.json  action_forward_dynamics_camera_1.json  action_inverse_dynamics_av.json  i2v.json
schemas/: OmniSampleOverrides.schema.json  OmniSampleOverrides.yaml
tests/: launch_regression_test.py
tools/: README.md
vllm-cosmos3/: pyproject.toml
vllm-cosmos3/vllm_cosmos3/: model.py
(+581 files in other folders)
